2005-02-20  John Luke  <john.luke@gmail.com>

	* Services/ServiceManager.cs:
	* Services/IMessageService.cs:
	* Services/AbstractService.cs:
	* Services/FileUtilityService.cs:
	* Services/IService.cs:
	* Makefile.am: remove System.Drawing stuff
	dont define:LINUX
	* Services/SaveErrorChooseDialog.cs:
	* Services/SaveErrorInformDialog.cs: remove SWF cruft

2005-01-31  Todd Berman  <tberman@off.net>

	* AddIns/AddIn.cs: Remove usage of AddIn.xsd, it is a bad solution.
	* Makefile.am:
	* AddIn.xsd: Remove AddIn.xsd

2005-01-31  Lluis Sanchez Gual  <lluis@novell.com>

	* AddIn.xsd: Defined new codon for project formats.

2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* AddIns/AddIn.cs: Use IsDefined() to look for custom attributes. It's
	faster and uses less memory than GetCustomAttribute().

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* AddIn.xsd: Added new codon type, and new condition.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-05  Todd Berman  <tberman@off.net>

	* Services/GettextCatalog.cs: removed
	* Services/GettextCatalog.cs.in: Added, this is a passthru to
	Mono.Posix.Catalog. We are using the .in so that the locale dir is
	specified properly.
	* Makefile.am: Add .cs.in rules to generate, etc.

2004-07-02  Todd Berman  <tberman@off.net>

	* Services/FileUtilityService.cs: remove some unneeded code, and
	fix a string.

2004-06-28  Todd Berman  <tberman@off.net>

	* AddIns/AddIn.cs: Add a C.WL so you dont get weird errors without
	some more info.
	* Makefile.am: fixup makefile so that if the AddIn.xsd changes, the
	assembly is rebuilt.

2004-06-23  Todd Berman  <tberman@off.net>

	* Services/ServiceManager.cs: protected ctor added.

2004-06-23  Todd Berman  <tberman@off.net>

	* Services/ServiceManager.cs: make GetService a static method, hide
	the instance everywhere.

2004-05-29  Vladimir Vukicevic  <vladimir@pobox.com>
